--- a/app/views/ezr_content_class_attributes/index.html.erb
+++ b/app/views/ezr_content_class_attributes/index.html.erb
@@ -11,7 +11,7 @@
   <tr>
     <td><%=h ezr_content_class_attribute.identifier %></td>
     <td><%=h ezr_content_class_attribute.display_name %></td>
-    <td><%=h ezr_content_class_attribute.content_class_id %></td>
+    <td><%=h ezr_content_class_attribute.ezr_content_class_id %></td>
     <td><%= link_to 'Show', ezr_content_class_attribute %></td>
     <td><%= link_to 'Edit', edit_ezr_content_class_attribute_path(ezr_content_class_attribute) %></td>
     <td><%= link_to 'Destroy', ezr_content_class_attribute, :confirm => 'Are you sure?', :method => :delete %></td>
