--- a/app/views/ezr_content_class_attributes/show.html.erb
+++ b/app/views/ezr_content_class_attributes/show.html.erb
@@ -10,7 +10,7 @@
 
 <p>
   <b>Content class:</b>
-  <%=h @ezr_content_class_attribute.content_class_id %>
+  <%=h @ezr_content_class_attribute.content_class %>
 </p>
 
 
