--- a/app/views/ezr_content_class_attributes/new.html.erb
+++ b/app/views/ezr_content_class_attributes/new.html.erb
@@ -12,8 +12,8 @@
     <%= f.text_field :display_name %>
   </p>
   <p>
-    <%= f.label :content_class_id %><br />
-    <%= f.text_field :content_class_id %>
+    <%= f.label :ezr_content_class_id %><br />
+    <%= f.text_field :ezr_content_class_id %>
   </p>
   <p>
     <%= f.submit "Create" %>
