Test suite running.

--- a/app/views/ezr_content_class_attributes/edit.html.erb
+++ b/app/views/ezr_content_class_attributes/edit.html.erb
@@ -12,8 +12,8 @@
     <%= f.text_field :display_name %>
   </p>
   <p>
-    <%= f.label :content_class_id %><br />
-    <%= f.text_field :content_class_id %>
+    <%= f.label :content_class %><br />
+    <%= f.text_field :content_class %>
   </p>
   <p>
     <%= f.submit "Update" %>
