--- a/app/views/layouts/ezr.html.erb
+++ b/app/views/layouts/ezr.html.erb
@@ -13,6 +13,8 @@
 	<%= link_to "Pages", pages_path %>
 	<%= link_to "Content classes", ezr_content_classes_path %>
 	<%= link_to "Content class attributes", ezr_content_class_attributes_path %>
+	<%= link_to "Content objects", ezr_content_objects_path %>
+	<%= link_to "Content object attributes", ezr_content_object_attributes_path %>
 </p>
 <p style="color: green"><%= flash[:notice] %></p>
 
