--- a/app/views/ezr_content_classes/show.html.erb
+++ b/app/views/ezr_content_classes/show.html.erb
@@ -8,6 +8,12 @@
   <%=h @ezr_content_class.display_name %>
 </p>
 
+<p>
+	<b>Attributes</b><br/>
+	<% for attribute in @ezr_content_class.cc_attributes -%>
+		<%=h attribute %> (<%= attribute.atype %>)<br/>
+	<% end -%>
+</p>
 
 <%= link_to 'Edit', edit_ezr_content_class_path(@ezr_content_class) %> |
 <%= link_to 'Back', ezr_content_classes_path %>
